k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medcore-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medcore-db
  template:
    metadata:
      labels:
        app: medcore-db
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: pgdata-pvc
