k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medcore-db
spec:
  selector:
    app: medcore-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
